syntax = "proto3";
package api.user.v1;
option go_package = "user/api/v1;v1";
import "google/protobuf/empty.proto";


service User{
  rpc GetUserList(PageInfo) returns(UserListResponse);
  rpc GetUserByMobile(MobileRequest) returns(UserInfoResponse);
  rpc GetUserById(IdRequest) returns(UserInfoResponse);

  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);
  rpc UpdateUser(UpdateUserRequest) returns(google.protobuf.Empty);

  rpc CheckPassword(PasswordCheckRequest) returns(checkPasswordResponse);
}

message CreateUserInfo{
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UserInfoResponse{
  int64 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message PageInfo{
  uint32 page = 1;
  uint32 limit = 2;
}

message UserListResponse{
  int32 count = 1;
  repeated UserInfoResponse data = 2;
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  int64 id = 1;
}

message UpdateUserRequest{
  int64 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}


message PasswordCheckRequest{
  string Password = 1;
  string EncryptedPassword = 2;
}

message checkPasswordResponse{
  bool success = 1;
}

